# minixfs

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h  config.status  configure  configure.in  configure~  dir.c  genfs.c  iname.c  inode.c  man_mfstool.html  man_minixfs.html  minix_fs.h  minixfs  minixfs.1  minixfs.c  protos.h  reader.c  super.c  utils.c  writer.c
.deps/: dir.Po  genfs.Po  iname.Po  inode.Po  minixfs.Po  reader.Po  super.Po  utils.Po  writer.Po
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: README.Debian  autoreconf.after  autoreconf.before  changelog  control  files
debian/.debhelper/minixfs/: dbgsym-build-ids
debian/.debhelper/minixfs/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/minixfs/dbgsym-root/usr/share/doc/: minixfs-dbgsym
debian/minixfs/DEBIAN/: control  md5sums
debian/minixfs/usr/share/doc/minixfs/: copyright
debian/patches/: Autoconf-fix  MinixFS-V1-fix  add-instructions-to-build-a-.deb  fix-in-Makefile  make-fix  series  update-description  windows-version-update
debian/source/: include-binaries
windows/: make.sh
